# uptime-kuma-satellite

./: LICENSE  README.md  debug_tui.py  package-lock.json  pyproject.toml
docs/: cli-reference.md  configuration.md  development.md  installation.md  monitors.md  service.md  templates.md  usage.md  windows.md
src/uptime_kuma_satellite/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  param_schemas.py  scheduler.py  service_manager.py  template.py  tui.py  windows_service.py
src/uptime_kuma_satellite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uptime_kuma_satellite/monitors/: __init__.py  cpu_usage.py  disk_space.py  file_age.py  file_exists.py  load_average.py  log_file.py  memory_usage.py  ping.py  process.py  process_count.py  service.py  uptime.py
src/uptime_kuma_satellite/tui/: __init__.py  app.py  editor_screen.py  main_screen.py  template_editor_screen.py
tests/: conftest.py  mock_server.py  test_cli_template.py  test_config.py  test_integration.py  test_models.py  test_monitors.py  test_service.py  test_tui.py
